infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "fdx-ri-dev-kube-hc"}'
  name: ridev-svc
spec:
  selector:
    app: ridev
  ports:
  - name: ridev-tomcat
    protocol: TCP
    port: 8080
    targetPort: 8080
